crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unique_mana_flask.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/unique_mana_flask.txt
---
Item {
    item_class: "Mana Flasks",
    rarity: Unique,
    name: Some(
        "Lavianga's Spirits",
    ),
    base_type: Some(
        "Gargantuan Mana Flask",
    ),
    item_level: Some(
        80,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            49,
        ),
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "This Flask cannot be Used but applies its Effect constantly — Unscalable Value",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "72(80-70)% reduced Amount Recovered",
            ],
        },
    ],
    flavour_text: [
        "How do I cope with what I witnessed on Wraeclast?\nThank the Ancestors! My cup, it overflows.\"\n- Lavianga, former advisor to Kaom",
    ],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
