crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unique_sceptre_unusable.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/unique_sceptre_unusable.txt
---
Item {
    item_class: "Sceptres",
    rarity: Unique,
    name: Some(
        "Sylvan's Effigy",
    ),
    base_type: Some(
        "Stoic Sceptre",
    ),
    item_level: Some(
        84,
    ),
    quality: Some(
        20,
    ),
    requirements: Requirements {
        level: Some(
            84,
        ),
        strength: Some(
            45,
        ),
        dexterity: None,
        intelligence: Some(
            114,
        ),
    },
    sockets: Some(
        "S",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Spirit",
            value: "159 (augmented)",
        },
        Property {
            name: "Grants Skill",
            value: "Level 19 Discipline",
        },
        Property {
            name: "Grants Skill",
            value: "Level 19 Azmerian Wolf",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "59(50-75)% increased Spirit",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Life",
            ],
            stats: [
                "Allies in your Presence Regenerate 65.9(50-100) Life per second",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Attribute",
            ],
            stats: [
                "+12(6-12) to all Attributes",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "Companions deal 82(50-100)% increased damage to your Marked targets",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "You can have any number of Companions of different types — Unscalable Value",
            ],
        },
    ],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [
        "Unusable",
    ],
}
