crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@unique_staff.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/unique_staff.txt
---
Item {
    item_class: "Staves",
    rarity: Unique,
    name: Some(
        "Sire of Shards",
    ),
    base_type: Some(
        "Chiming Staff",
    ),
    item_level: Some(
        82,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            84,
        ),
        strength: None,
        dexterity: None,
        intelligence: Some(
            147,
        ),
    },
    sockets: Some(
        "S S S",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Grants Skill",
            value: "Level 19 Sigil of Power",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Damage",
                "Caster",
            ],
            stats: [
                "103(80-120)% increased Spell Damage",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Caster",
                "Speed",
            ],
            stats: [
                "15(10-20)% increased Cast Speed",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Elemental",
                "Fire",
                "Cold",
                "Lightning",
                "Resistance",
            ],
            stats: [
                "+5(5-10)% to all Elemental Resistances",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "20% increased Light Radius",
            ],
        },
        Modifier {
            kind: Unique,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Caster",
            ],
            stats: [
                "Spells fire 4 additional Projectiles",
                "Spells fire Projectiles in a circle",
            ],
        },
    ],
    flavour_text: [],
    notes: [],
    corrupted: true,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
