crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@waystone_tier15.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/waystone_tier15.txt
---
Item {
    item_class: "Waystones",
    rarity: Rare,
    name: Some(
        "Hidden Edge",
    ),
    base_type: Some(
        "Waystone (Tier 15)",
    ),
    item_level: Some(
        82,
    ),
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Revives Available",
            value: "2 (augmented)",
        },
        Property {
            name: "Item Rarity",
            value: "+15% (augmented)",
        },
        Property {
            name: "Pack Size",
            value: "+7% (augmented)",
        },
        Property {
            name: "Monster Rarity",
            value: "+25% (augmented)",
        },
        Property {
            name: "Monster Effectiveness",
            value: "+13% (augmented)",
        },
        Property {
            name: "Waystone Drop Chance",
            value: "+55% (augmented)",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Profane",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Monsters deal 18(15-19)% of Damage as Extra Chaos",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Painful",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "15(15-19)% increased Monster Damage",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Venomous",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Monsters have 28(27-33)% chance to Poison on Hit",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Unwavering",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Monsters have 71(70-79)% increased Ailment Threshold",
                "Monsters have 65(60-69)% increased Stun Threshold",
            ],
        },
    ],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
